@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -107,6 +107,8 @@ RunTimeTypedClass<T, Ptr>::RunTimeTypedClass( const char *docString )
 
 	BaseClass::BaseClass::def( "inheritsFrom", (bool (*)( const char * ) )&T::inheritsFrom );
 	BaseClass::BaseClass::def( "inheritsFrom", (bool (*)( IECore::TypeId ) )&T::inheritsFrom );
+	BaseClass::BaseClass::def( "inheritsFrom", (bool (*)( const char *, const char * ) )&IECore::RunTimeTyped::inheritsFrom );
+	BaseClass::BaseClass::def( "inheritsFrom", (bool (*)( IECore::TypeId, IECore::TypeId ) )&IECore::RunTimeTyped::inheritsFrom );
 	BaseClass::BaseClass::staticmethod( "inheritsFrom" );
 
 }
